assets/css/styles.css
/* ... */
.description {
	width: 50%;
	height: 100%;
	padding: 270px 50px 150px 50px;
	box-sizing: border-box;
	float: left;
	text-align: center;
	color: white;
	display: flex;
	flex-direction: column;
}

.description h2 {
	margin: 0;
	font-size: 40px;
}

.description p {
	flex-grow: 1;
	font-size: 24px;
    width: 420px;
}

.description button {
	margin: auto;
	align-self: flex-end;
}

/* Quiz description page */

.backgroundMaryDescription {
	width: 1024px;
	height: 768px;
	padding-top: 400px;
	box-sizing: border-box;
	background: url("../images/summary.png");
}

.backgroundRomanticDescription {
	width: 1024px;
	height: 768px;
	padding-top: 400px;
	box-sizing: border-box;
	background: url("../images/romanticDescription.png");
}

.quizDescription {
	width: 100%;
	padding: 0 160px;
	box-sizing: border-box;
	float: left;
	font-size: 24px;
	color: white;
	text-align: center;
	white-space: pre-line;
}

.quizDescNav {
	width: 100%;
	margin-top: 60px;
	padding: 0 160px;
	box-sizing: border-box;
	float: left;
	display: flex;
	justify-content: space-between;
}

.romanticButton:active {
	background-color: white;
	color: #595959;
}

.navButton {
	width: 146px;
}

/* MISCELLANEOUS THINGS THAT NEED TO BE ORGANIZED */

.chooseButton {
	width: 160px;
	height: 90px;
	border-radius: 10px;
	background-color: white;
	border: 1px solid;
	font-size: 20px;
}

.chooseQuiz {
	margin: 0 auto;
	padding: 0;
}

#quitContainer {
	margin: auto;
	width: 360px;
}

#anotherQuizButton {
	float: right;
}

/* Results page */

.resultsDescription {
	width: 100%;
	height: 480px;
	padding: 0 60px;
	float: left;
	top: 150px;
	position: relative;
	box-sizing: border-box;
	font-size: 24px;
	color: white;
}

#shareResultsButton {
	float: right;
	margin-left: 18px;
}

.resultsButtonContainer {
	width: 95%;
	padding-right: 5%;
	height: 90px;
}

.sentButtonContainer {
	width: 360px;
	margin: auto;
}

.sentButtonContainer button {
	margin-left: 10px;
	margin-right: 10px;
}

#menuButton {
	width: 186px;
}

.quote {
	font-style: italic;
}

.maryName {
    font-style: normal;
}

/* Share Results */

.shareResultsForm {
	width: 700px;
	margin: 0 auto;
	padding-top: 160px;
	box-sizing: border-box;
}

.inputContainer {
	width: 100%;
	height: 96px;
	float: left;
}

input {
	width: 100%;
	height: 60px;
	padding: 5px 15px;
	border: none;
	outline: none;
	float: left;
	box-sizing: border-box;
	background: rgba(255,255,255, 0.8);
	font-family: "Source Sans Pro", "Segoe UI", sans-serif !important;
	font-size: 26px;
	color: #475f95;
	box-shadow: inset 0px 0px 4px 4px rgba(0, 0, 0, 0.2);
}

input::-webkit-input-placeholder {
   color: rgba(65,94,142, 0.5);
}

input.showError {
	border-bottom: 3px solid #8a1538;
}

.errorText {
	width: 100%;
	height: 36px;
	margin-top: 4px;
	float: left;
	color: white;
	box-sizing: border-box;
}

.shareResultsButtonContainer {
	width: 100%;
	float: left;
}

.shareResultsDescription {
	width: 100%;
	margin-top: 36px;
	float: left;
	color: white;
	font-size: 16px;
}

#sendResultsButton {
	float: right;
}

/* Backgrounds */

.backgroundChooseQuiz {
	background-image: url("../images/ChooseQuiz.png");
	background-size: 1024px 768px;
	width: 1024px;
	height: 768px;
}

.backgroundMaryQuestion {
	background-image: url("../images/maryQuestion.png");
	background-size: 1024px 768px;
	width: 1024px;
	height: 768px;
	margin: 0 auto -100px;
}

.backgroundRomanticQuestion {
	background-image: url("../images/romQuestion.png");
	width: 1024px;
	height: 768px;
	margin: 0 auto -100px;
}

.backgroundRomanticResults {
	background-image: url("../images/resultsRomantic.png");
	width: 1024px;
	height: 768px;
	margin: 0 auto -100px;
}

.backgroundMaryResults {
	background-image: url("../images/resultsMary.png");
	width: 1024px;
	height: 768px;
	margin: 0 auto -100px;
}

.maryBackgroundShareResults {
	background-image: url("../images/maryShareResultsBackground.png");
	width: 1024px;
	height: 768px;
}

.romanticBackgroundShareResults {
	background-image: url("../images/romanticShareResultsBackground.png");
	width: 1024px;
	height: 768px;
}

/* Popup */

.modalheader {
    width: 50px;
}

.popupNew {
	text-align: center;
	z-index: 1002;
	width: 444px;
	padding-left: 150px;
	padding-right: 150px;
	padding-top: 60px;
	height: 411px;
	background: white;
	position: absolute;
	margin-left: 138px;
	margin-top: 147px;
}

.popupBackground {
	z-index: 1001;
	width: 100%;
	height: 768px;
	background: rgba(0,0,0, 0.7);
	position: absolute;
}

.popupText {
	font-family: "Source Sans Pro", "Segoe UI", sans-serif !important;
	font-size: 60px;
	color: rgb(65,94,142);
}


.popup13 {
	text-align: center;
	z-index: 1002;
	width: 594px;
	padding-left: 75px;
	padding-right: 75px;
	padding-top: 60px;
	height: 411px;
	background: rgba(255,255,255, 1);
	position: absolute;
	margin-left: 138px;
	margin-top: 147px;
}

.popup13Text {
	font-size: 55px;
	color: rgb(65,94,142);
	margin-top: 80px;
	margin-bottom: 120px;
}

.popup13Helper {
	font-size: 25px;
	color: rgb(65,94,142);
	margin-bottom: 20px;
}

.popupEasterEgg {
  text-align: center;
  z-index: 1002;
  width: 325px;
  height: 500px;
  background: white;
  position: absolute;
  margin-left: 352px;
  margin-top: 134px;
}

.easterText {
  font-family: "Source Sans Pro", "Segoe UI", sans-serif !important;
  font-size: 40px;
  color: rgb(65,94,142);
  width: 325px;
  white-space: pre-wrap;
  text-align: center;
}

.popupButton {
	background-color: rgba(255,255,255, 0);
	border: 2px solid rgb(65,94,142);
	color: rgb(65,94,142);
	width: 188px;
	height: 50px;
	font-size: 30px;
	margin-right: 10px;
	margin-left: 10px;
	margin-top: 50px;
}

.popupShareButton {
	background-color: rgba(255,255,255, 0);
	border: 2px solid rgb(65,94,142);
	color: rgb(65,94,142);
	width: 188px;
	height: 50px;
	font-size: 20px;
	margin-right: 10px;
	margin-left: 10px;
	margin-top: 50px;
}

/* Touch To Begin Animation */

#crossfade {
    width: 1024px;
    height: 768px;
	position: absolute;
}
/* ... */

